--- a/views/home.html
+++ b/views/home.html
@@ -21,7 +21,7 @@
         <section class="top-bar">
             <div class="top-bar__img">
                 <a href="/">
-                    <img  src="img/logo-mercado-liebre.svg" alt="logo mercado liebre">
+                    <img src="img/logo-mercado-liebre.svg" alt="logo mercado liebre">
                 </a>
 
             </div>
@@ -35,7 +35,7 @@
                     <i class="fa-solid fa-magnifying-glass"></i>
 
                 </button>
-                
+
             </form>
 
 
@@ -65,7 +65,8 @@
                 </li>
                 <li><a href="/login">Ingresá<span class="iconMenu"><i
                                 class="fa-solid fa-arrow-right-to-bracket"></i></span></a></li>
-                <li class="last-li"><a href="#">Mis compras<span class="iconMenu"><i class="fa-solid fa-bag-shopping"></i></span></a>
+                <li class="last-li"><a href="#">Mis compras<span class="iconMenu"><i
+                                class="fa-solid fa-bag-shopping"></i></span></a>
                 </li>
 
             </ul>
@@ -79,90 +80,64 @@
         </a>
 
     </header>
-
-
-
-
-
     <img class="banner" src="img/img-home-banner.jpg" alt="banner de ofertas">
-
-
     <main class="main-index">
-
-        <section class="main-index__section1">
-
-
+        <section>
             <h2>Basado en tu ultima vista</h2>
             <div class="section-product">
                 <article class="product">
                     <img src="img/img-cafetera-moulinex.jpg" alt="cafetera">
-                    <div class="truck"><i class="fa-solid fa-truck"></i></div>
+                    <div class="truck">
+                        <i class="fa-solid fa-truck"></i>
+                    </div>
                     <div class="prec-desc">
                         <p class="precio">$6770</p>
                         <p class="descuento">40% OFF</p>
-
                     </div>
-
                     <h3>Cafetera Moulinex</h3>
                 </article>
                 <article class="product">
                     <img src="img/img-macbook-pro-2019.jpg" alt="macbook">
-                    <div class="truck"><i class="fa-solid fa-truck"></i></div>
-
-
-
+                    <div class="truck">
+                        <i class="fa-solid fa-truck"></i>
+                    </div>
                     <div class="prec-desc">
                         <p class="precio">$230.000</p>
                         <p class="descuento">20% OFF</p>
-
-
                     </div>
                     <h3>MacBook Pro 2019</h3>
                 </article>
                 <article class="product">
                     <img src="img/img-samsung-galaxy-s10.jpg" width="360" alt="samsung-galaxy-s10">
-                    <div class="truck"><i class="fa-solid fa-truck"></i></div>
-
-
-
+                    <div class="truck">
+                        <i class="fa-solid fa-truck"></i>
+                    </div>
                     <div class="prec-desc">
                         <p class="precio">$70.500</p>
                         <p class="descuento">10% OFF</p>
                     </div>
-
                     <h3>Samsung galaxy S10</h3>
                 </article>
                 <article class="product">
                     <img src="img/img-tv-samsung-smart.jpg" width="360" alt="img-tv-samsung-smart">
-                    <div class="truck"><i class="fa-solid fa-truck"></i></div>
-
-
+                    <div class="truck">
+                        <i class="fa-solid fa-truck"></i>
+                    </div>
                     <div class="prec-desc">
                         <p class="precio">$23.200</p>
                         <p class="descuento">5% OFF</p>
-
                     </div>
-
-
                     <h3>SmartTv Samsung 43"</h3>
                 </article>
         </section>
-        </div>
-
         <section>
-
-
             <h2>Seccion de ofertas</h2>
-
             <div class="section-product">
-
-
-
-
                 <article class="product">
                     <img src="img/img-cafetera-moulinex.jpg" width="360" alt="img-cafetera-moulinex">
-                    <div class="truck"><i class="fa-solid fa-truck"></i></div>
-
+                    <div class="truck">
+                        <i class="fa-solid fa-truck"></i>
+                    </div>
                     <div class="prec-desc">
                         <p class="precio">$6770</p>
                         <p class="descuento">40% OFF</p>
@@ -173,79 +148,69 @@
                 </article>
                 <article class="product">
                     <img src="img/img-macbook-pro-2019.jpg" width="360" alt="macbook">
-                    <div class="truck"><i class="fa-solid fa-truck"></i></div>
-
-
+                    <div class="truck">
+                        <i class="fa-solid fa-truck"></i>
+                    </div>
                     <div class="prec-desc">
                         <p class="precio">$230.000</p>
                         <p class="descuento">20% OFF</p>
-
-
                     </div>
-
                     <h3>MacBook Pro 2019</h3>
                 </article>
                 <article class="product">
                     <img src="img/img-samsung-galaxy-s10.jpg" width="360" alt="samsung-galaxy-s10">
-                    <div class="truck"><i class="fa-solid fa-truck"></i></div>
-
-
-
+                    <div class="truck">
+                        <i class="fa-solid fa-truck"></i>
+                    </div>
                     <div class="prec-desc">
                         <p class="precio">$70.500</p>
                         <p class="descuento">10% OFF</p>
-
                     </div>
-
                     <h3>Samsung galaxy S10</h3>
                 </article>
                 <article class="product">
                     <img src="img/img-tv-samsung-smart.jpg" width="360" alt="img-tv-samsung-smart">
-                    <div class="truck"><i class="fa-solid fa-truck"></i></div>
-
-
-
+                    <div class="truck"><i class="fa-solid fa-truck"></i>
+                    </div>
                     <div class="prec-desc">
                         <p class="precio">$23.200</p>
                         <p class="descuento">5% OFF</p>
-
                     </div>
-
-
                     <h3>SmartTv Samsung 43"</h3>
                 </article>
-
             </div>
         </section>
     </main>
     <footer class="footer">
         <div class="cont-footer">
             <section class="section-paga">
-                <div class="iconFooter"><i class="fa-solid fa-credit-card"></i></div>
-                <h2>Pagá con tarjeta o en efectivo </i></h2>
+                <div class="iconFooter">
+                    <i class="fa-solid fa-credit-card"></i>
+                </div>
+                <h2>Pagá con tarjeta o en efectivo</h2>
                 <p class="section-paga__p">Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                     puntos de pago. ¡Y siempre es seguro!</p>
             </section>
             <section class="section-envio">
-                <div class="iconFooter"><i class="fa-solid fa-gift"></i></div>
+                <div class="iconFooter">
+                    <i class="fa-solid fa-gift"></i>
+                </div>
                 <h2>Envío gratis desde $ 2.500</h2>
                 <p class="section-paga__p">Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
                     productos. Es un beneficio de Mercado Puntos.</p>
             </section>
             <section class="section-seg">
-                <div class="iconFooter"><i class="fa-solid fa-user-shield"></i></div>
+                <div class="iconFooter">
+                    <i class="fa-solid fa-user-shield"></i>
+                </div>
                 <h2>Seguridad, de principio a fin</h2>
                 <p class="section-paga__p">¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                     porque estás siempre protegid@.</p>
             </section>
-            <br>
         </div>
-
         <section>
-
-            <p class="section-paga__p" class="copy">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+            <p class="copy">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
         </section>
-
     </footer>
 
 
