--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -161,7 +161,7 @@ header {
 }
 
 .main-index {
-    background-color: #ebebeb;
+    background-color: #db1e24;
     margin-left: 5px;
     margin-right: 5px;
     margin-bottom: 20px;
