--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -26,6 +26,6 @@
         </section>
     </div>
     <section>
-        <p class="copy">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+        <p class="copy">Copyright &#169;  1999-2020 MercadoLiebre S.R.L.</p>
     </section>
 </footer>
